--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,9 @@ img.logo__img {
 section#home {
     display: flex;
     justify-content: space-between;
-    height: 100vh;
+    /* height: 100vh; */
     align-items: center;
-    padding: 0 7rem;
+    padding: 5.563rem 7rem;
 }
 
 .home__contact h1 {
@@ -141,7 +141,7 @@ section#about {
 .about__contact p {
     font-weight: 400;
     line-height: 2rem;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
 }
 
 
